--- a/node/NodeServer/NodeServer.csproj
+++ b/node/NodeServer/NodeServer.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.30.1" />
     <PackageReference Include="Google.Protobuf.Tools" Version="3.30.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
