--- a/node/NodeServer/NodeServer.csproj
+++ b/node/NodeServer/NodeServer.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.30.1" />
     <PackageReference Include="Google.Protobuf.Tools" Version="3.30.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.AutoActivation" Version="9.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
   </ItemGroup>
